kubernetes/clusters/home-k3s/apps/observability/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app victoria-logs
spec:
  hostnames:
    - logs.${INTERNAL_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-logs-server
          namespace: observability
          port: 9428
